--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "grunt-contrib-copy": "1.0.0",
     "grunt-contrib-uglify": "1.0.1",
     "grunt-dustjs": "1.3.0",
-    "grunt-systemjs-builder": "0.2.6"
+    "babel-preset-es2015": "^6.6.0",
+    "grunt-babel": "6.0.0"
   },
   "directories": {
     "test": "test"
