--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "grunt-contrib-uglify": "1.0.1",
     "grunt-dustjs": "1.3.0",
     "babel-preset-es2015": "^6.6.0",
-    "grunt-babel": "6.0.0"
+    "grunt-babel": "6.0.0",
+    "rfr": "1.2.3"
   },
   "directories": {
     "test": "test"
